ajustes complementarios para imagen estatica

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ backend/jdsite/__pycache__/
 backend/inquiries/__pycache__/
 backend/inquiries/migrations/__pycache__/
 backend/.env
+env/
+venv/
+backend/db.sqlite3
+backend/staticfiles/
