--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.11.0
 boto3==1.41.3
 botocore==1.41.3
+certifi==2025.11.12
 cffi==2.0.0
+charset-normalizer==3.4.4
 cryptography==46.0.3
 Django==5.2.8
 django-ses==4.4.0
 gunicorn==23.0.0
 holidays==0.85
+idna==3.11
 jmespath==1.0.1
 mysqlclient==2.2.7
 packaging==25.0
@@ -14,6 +17,7 @@ pycparser==2.23
 PyMySQL==1.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+requests==2.32.5
 s3transfer==0.15.0
 six==1.17.0
 sqlparse==0.5.3
