Ajustes Front, permitir descargar certificaciones también en el enlace CV para reclutadores/referidos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,16 @@
     "[javascript]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
+    // Formateo automático en CSS y SCSS
+    "[css]": {
+        "editor.formatOnSave": true,
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true
+    },
+    "[scss]": {
+        "editor.formatOnSave": true,
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true
+    }    
 }
